--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3678,7 +3678,7 @@ input, select, textarea {
 			border-bottom-color: #ffffff;
 		}
 
-		#nav ul.links {
+		#nav ul.link {
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -3700,12 +3700,12 @@ input, select, textarea {
 			text-transform: uppercase;
 		}
 
-			#nav ul.links li {
+			#nav ul.link li {
 				display: block;
 				padding-left: 0;
 			}
 
-				#nav ul.links li a {
+				#nav ul.link li a {
 					-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 					-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 					-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
@@ -3716,20 +3716,20 @@ input, select, textarea {
 					padding: 0 2rem;
 				}
 
-					#nav ul.links li a:hover {
+					#nav ul.link li a:hover {
 						color: inherit !important;
 						background-color: rgba(255, 255, 255, 0.1);
 					}
 
-				#nav ul.links li.active {
+				#nav ul.link li.active {
 					background-color: #ffffff;
 				}
 
-					#nav ul.links li.active a {
+					#nav ul.link li.active a {
 						color: #1e252d;
 					}
 
-						#nav ul.links li.active a:hover {
+						#nav ul.link li.active a:hover {
 							color: #18bfef !important;
 						}
 
@@ -4577,16 +4577,16 @@ input, select, textarea {
 		z-index: 10002;
 	}
 
-		#navPanel .links {
+		#navPanel .link {
 			list-style: none;
 			padding-left: 0;
 		}
 
-			#navPanel .links li {
+			#navPanel .link li {
 				border-top: solid 2px #eeeeee;
 			}
 
-				#navPanel .links li a {
+				#navPanel .link li a {
 					border-bottom: 0;
 					display: block;
 					font-family: "Source Sans Pro", Helvetica, sans-serif;
@@ -4598,7 +4598,7 @@ input, select, textarea {
 					text-transform: uppercase;
 				}
 
-				#navPanel .links li:first-child {
+				#navPanel .link li:first-child {
 					border-top: 0;
 				}
 
